--- a/templates.cfg
+++ b/templates.cfg
@@ -15,8 +15,9 @@ Config : pom.xml             ; pom_persistence_spring_mongo.txt          ;   ; p
 #Persistence service pattern      ; PersistenceServicePattern.java     ; ${SRC}/${ROOT_PKG}/persistence/commons  ; PersistenceServicePattern_java.vm     ; 1
 Persistence spring mongo service pattern ; PersistenceSpringMongoServicePattern.java ; ${SRC}/${ROOT_PKG}/persistence/commons  ; PersistenceSpringMongoServicePattern_java.vm ; 1
 #Persistence service provider     ; PersistenceServiceProvider.java    ; ${SRC}/${ROOT_PKG}/persistence/commons  ; PersistenceServiceProvider_java.vm    ; 1
-Sequence.java         ; Sequence.java         ; ${SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; Sequence_java.vm   ; 1
+Sequence         ; Sequence.java         ; ${SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; Sequence_java.vm   ; 1
 SequenceDAO          ; SequenceDAO.java         ; ${SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; SequenceDAO_java.vm   ; 1
+MongoConfig          ; MongoConfig.java ; ${SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; MongoConfig_java.vm   ; 1
 
 #--- Mongo Database SCRIPT
 SCRIPT for Mongo user database  ; create_mongo_db.java      ; ${RES}/mongo        ; mongo/create_mongo_db.vm      ; 1
@@ -29,6 +30,5 @@ Persistence spring mongo    ; ${BEANNAME}PersistenceSpringMongo.java ; ${SRC}/${
 TEST : MongoEmbedded   ; MongoEmbedded.java            ; ${TEST_SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; test/MongoEmbedded_java.vm             ; 1
 TEST : DAO JUnit test     ; ${BEANNAME}PersistenceSpringMongoTest.java ; ${TEST_SRC}/${ROOT_PKG}/persistence/impl/springMongo ; test/XxxPersistenceSpringMongoTest_java.vm  ; *
 TEST : SequenceDAO  test  ; SequenceDAOTest.java            ; ${TEST_SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; test/SequenceDAOTest_java.vm   ;1          ; 1
-TEST : SpringMongoTemplate  test  ; SpringMongoTemplate.java            ; ${TEST_SRC}/${ROOT_PKG}/persistence/impl/springMongo/commons ; test/SpringMongoTemplate_java.vm   ;1          ; 1
 
 #ImplementationProvider; ${BEANNAME}ImplementationProvider.java ;  ; ${SRC}/${ROOT_PKG}/data/record/implementationProvider  ;        ImplementationProvider_java.vm
